resolved overflow issue

--- a/day-21/src/App.css
+++ b/day-21/src/App.css
@@ -66,5 +66,6 @@ h1 {
 .main-bg {
   background-color: var(--off-white);
   color: var(--black);
+  overflow: hidden;
 }
 
