--- a/day-21/src/styles/Allies.css
+++ b/day-21/src/styles/Allies.css
@@ -11,7 +11,7 @@
   position: absolute;
   background-repeat: no-repeat;
   background-position: center;
-  width: 100%;
+  width: 90%;
   height: 200%;
   opacity: 1;
   animation: parallax linear infinite;
