--- a/day-21/src/styles/AlliesCard.css
+++ b/day-21/src/styles/AlliesCard.css
@@ -12,15 +12,15 @@
 .uneven-position .col-12:nth-child(2) .allies-card-container {
   position: absolute;
   top: 50%;
-  left: 13%;
+  left: 10%;
 }
 .uneven-position .col-12:nth-child(3) .allies-card-container {
   position: absolute;
   top: 35%;
-  left: 45%;
+  left: 40%;
 }
 .uneven-position .col-12:nth-child(4) .allies-card-container {
   position: absolute;
   top: 60%;
-  left: 73%;
+  left: 70%;
 }
